external style sheets

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Selectors</title>
+    <!-- 3: External Style Sheet -->
+    <link rel="stylesheet" href="style.css" />
     <!-- 2: Internal Styling: defines stules that apply to entire webpage for selected tags -->
     <style>
       /* 
@@ -35,6 +37,8 @@
     </style>
   </head>
   <body>
+    <a href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
     <h1>CSS Selectors</h1>
     <!-- 1: Inline Styling: define styles within a tag -->
     <h3 class="sub-heading sub-heading-font" style="color: blue">
